# Land_use_change_Meta_Analysis

./: .env.example  .gitignore  LICENSE  README.md  Soil_Extractor.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: cockpit.py
data/taskpacks/: soil_C_fractions.yaml
docs/: ARCHITECTURE_v2.md  ARCHITECTURE_v3.md  writeup.md
scripts/: _gt.py  bench_values.py  benchmark.py  eval_against_gt.py  export_taskpack.py  locate_eval.py  prepare_paper.py
src/metaextract/: __init__.py  cli.py  cockpit_cache.py  evaluate.py  extractor.py  families.py  flatten.py  highlight.py  ingest.py  locate.py  pipeline.py  records.py  render.py  reviewstore.py  sampling.py  schema.py  sourcedoc.py  tabular.py  validator.py
tests/: test_cockpit_cache.py  test_families.py  test_highlight.py  test_locate.py  test_reviewstore.py  test_sampling.py  test_tabular.py  test_taskpack.py  test_validator.py
