[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "metaextract"
version = "0.1.0"
description = "LLM-assisted data extraction for ecological meta-analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Xinjie Zou" }]
dependencies = [
    "google-genai>=1.0.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
metaextract = "metaextract.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
