[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "metaextract"
version = "0.1.0"
description = "LLM-assisted data extraction tool for Meta analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Xinjie Zou" }]
dependencies = [
    "google-genai>=1.0.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "pypdf>=4.0",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
app = ["streamlit>=1.30"]
eval = ["openpyxl>=3.1"]
dev = [
    "pytest>=7.0",
    "streamlit>=1.30",
    "openpyxl>=3.1",
]

[project.scripts]
metaextract = "metaextract.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
